--- a/__solution/exercise-2/style.css
+++ b/__solution/exercise-2/style.css
@@ -1,22 +1,27 @@
 body {
-    margin: 0;
-    font-family: Poppins, sans-serif;
+  margin: 0;
 }
 
-.container {
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-    min-height: 100vh;
+.nav {
+  padding: 10px;
+  background-color: #3a3633;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.bar {
-    height: 50px;
-    background-color: #3a3633;
-    color: #fff;
+.nav > a {
+  color: #fff;
+  margin: 0 40px;
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+  transition: opacity 0.2s ease-in-out;
 }
 
-.center-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.logo {
+  display: block;
+}
+
+.nav > a:hover {
+  opacity: 0.5;
 }
