--- a/__solution/exercise-4/style.css
+++ b/__solution/exercise-4/style.css
@@ -1,27 +1,48 @@
 body {
   margin: 0;
+  font-family: Poppins, sans-serif;
 }
 
-.nav {
-  padding: 10px;
-  background-color: #3a3633;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.main-content {
+  text-align: center;
+  margin-top: 10px;
 }
 
-.nav > a {
-  color: #fff;
-  margin: 0 40px;
+.brow {
+  color: #333;
+  border: 1px solid #333;
+  border-radius: 4px;
+  padding: 4px 15px;
+  line-height: 1.47;
+  font-size: 1rem;
+  display: inline-block;
+}
+
+.main-content > h2 {
+  margin: 8px;
+}
+
+.main-content > p {
+  max-width: 375px;
+  margin: 0 auto;
+}
+
+.main-content > a {
+  margin-top: 6px;
+}
+
+.link {
+  color: #0070c9;
   text-decoration: none;
-  font-family: 'Poppins', sans-serif;
-  transition: opacity 0.2s ease-in-out;
+  display: inline-block;
 }
 
-.logo {
-  display: block;
+.link:hover {
+  text-decoration: underline;
 }
 
-.nav > a:hover {
-  opacity: 0.5;
+.link::after {
+  content: '>';
+  padding-left: 8px;
+  display: inline-block;
 }
