--- a/__solution/exercise-9/style.css
+++ b/__solution/exercise-9/style.css
@@ -1,41 +1,68 @@
-body {
-    margin: 0;
+.header {
+    text-align: center;
 }
 
-.nav {
-    background-color: #383737;
-}
-
-.nav-dropdown {
+.facts {
+    border-spacing: 0;
+    width: 100%;
+    border-radius: 4px;
+    border: 1px solid #ddd;
     padding: 20px;
-    color: #fff;
-    text-decoration: none;
-    position: relative;
-    display: inline-block;
 }
 
-.nav-dropdown:hover > .dropdown-menu {
-    display: block;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: #03a9f4;
+tr:nth-child(even) {
+    background-color: #e6e6e6;
 }
 
-.dropdown-menu {
-    display: none;
+th {
+    text-align: left;
 }
 
-.menu-list {
-    margin: 0;
+td,
+th {
+    padding: 10px;
+}
+
+h3 {
+    margin-bottom: 0;
+}
+
+/* Using CSS grid */
+.links {
+    display: grid;
+    grid-column-gap: 20px;
     padding: 0;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-.menu-list > li {
+.links > li {
     list-style-type: none;
-    padding: 20px;
 }
 
-.menu-list > li:hover {
+/* Using Flexbox */
+/* .links {
+    display: flex;
+    padding: 0;
+    justify-content: space-between;
+}
+
+.links > li {
+    list-style-type: none;
+    flex: 1;
+    margin-right: 20px;
+}
+
+.links > li:last-child {
+    margin-right: 0;
+} */
+
+.links a {
+    text-decoration: none;
+    color: #fff;
     background-color: dodgerblue;
+    padding: 20px;
+    display: inline-block;
+    box-sizing: border-box;
+    text-align: center;
+    width: 100%;
 }
