--- a/workshop/exercise-06/style.css
+++ b/workshop/exercise-06/style.css
@@ -10,4 +10,37 @@ body {
     color: #fff;
     text-decoration: none;
     display: inline-block;
+    position: relative;
+    padding: 20px 30px;
+    font-size: 24px;
 }
+
+.nav-dropdown:hover > .menu-dropdown{
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+}
+
+.menu-dropdown{
+    display: none;
+}
+
+.dropdown{
+    margin: 0;
+    padding: 0;
+}
+
+li{
+    background: blue;
+    color: white;
+    padding: 10px 20px;
+    margin: 0;
+    border-bottom: 1px solid
+    list-style-type: none;
+}
+
+li:hover{
+    background: darkblue;
+}
+
