--- a/workshop/exercise-08/style.css
+++ b/workshop/exercise-08/style.css
@@ -1,18 +1,31 @@
 body {
     margin: 0;
     font-family: Poppins, sans-serif;
+    min-height: 100vh;
 }
 
 .header {
-
+    text-align: center;
+    background: blue;
+    color: white;
+    box-shadow: 5px 5px darkgray;
 }
 
 .registration-form {
-
+    max-width: 800px;
+    margin: auto;
+    border: 1px solid lightgray;
+    box-shadow:  2px 2px 2px darkgray;
+    text-align: center;
+    border-radius: 5px;
+    box-sizing: border-box;
 }
 
 .text-field {
-
+    width: 300px;
+    border: lightblue 1px solid;
+    padding: 5px;
+    border-radius: 3px;
 }
 
 .radio-label,
@@ -21,29 +34,51 @@ body {
 }
 
 label {
-
+    display: flex;
+    justify-content: center;
 }
 
 .section {
-
+    border-top: 1px solid lightgray;
+    margin: 10px; 
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .section > label {
 
+
 }
 
 select {
-
+    margin: 5px;
+    border-radius: 5px;
+    border: 1px solid lightblue;
+    outline: none;
 }
 
 textarea {
-
+    width: 97%;
+    border: none;
+    background: lightgray;
+    height: 50px;
 }
 
 .form-button {
-
+    border: 1px solid blue;
+    padding: 10px 20px;
+    background: white;
+    margin: 10px;
+    transition: background 2500ms;
 }
 
 .form-button:hover {
-    
+    background: blue;
+    color: white;
+    cursor: pointer;
+}
+
+.comment {
+    display: block;
 }
