--- a/workshop/exercise-09/style.css
+++ b/workshop/exercise-09/style.css
@@ -1,3 +1,56 @@
+h1{
+  text-align: center;
+  margin-top: 0;
+}
+
 h3 {
   margin-bottom: 0;
+}
+
+body{
+  display: flex;
+  flex-direction: column;
+}
+
+table{
+  margin: 10px;
+  padding: 10px;
+  border: 1px dashed lightgray;
+  border-radius: 5px;
+}
+
+td{
+  line-height: 20px;
+  padding: 5px;
+}
+
+tr:nth-child(even) {
+  background: lightgray
+}
+
+.links{
+  display: flex;
+  list-style-type: none;
+  justify-content: space-between;
+  padding: 0;
+}
+
+li{
+  flex: 1;
+  margin-right: 20px;
+}
+
+li:last-child{
+  margin: 0;
+}
+
+.links a{
+  text-decoration: none;
+  background: blue;
+  padding: 20px;
+  color: white;
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  box-sizing: border-box;
 }
